Introduce QTC_FALLTHROUGH (from LLVM)

* Fix compilation on gtk2, qt4, and possibly old version qt5 (< 5.8).
* Fix a few more fallthrough warnings.

BUG: 387795